[package]
name = "ignorant"
version = "0.1.0"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Ignorant"
license = "MIT"
repository = "https://github.com/zahash/ignorant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
